syntax = "proto3";
option java_package ="ma.enset.subs";
service  GameService{
  rpc fullDirectionStream(stream guessRequest) returns(stream guessResponse); // Bi-directionnel Streaming
}
message guessRequest{
  string clientName = 1;
  int32 number =2;
}
message guessResponse {
  string clientName = 1;
  double number =2;
  string eventialitee  =3;
  bool isTrue =4;
}